<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="#E8E8E8"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.AddNotesActivity"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >
        <EditText
            android:id="@+id/notesTitle"
            android:textColor="@color/black"
            android:background="@drawable/edit_txt_back"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="0dp"
            android:fontFamily="@font/product_sans_regular"
            android:hint="@string/title"
            android:textColorHint="@color/gray"
            android:padding="16dp"
            android:maxLines="1"/>


        <EditText
            android:id="@+id/notesData"
            android:layout_width="match_parent"
            android:layout_height="540dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/edit_txt_back"
            android:fontFamily="@font/product_sans_regular"
            android:gravity="start"
            android:hint="@string/notes"
            android:inputType="textMultiLine"
            android:padding="16dp"
            android:scrollbars="vertical"
            android:textColor="@color/black"
            android:textColorHint="@color/gray" />

        <LinearLayout
            android:layout_width="311dp"
            android:layout_height="58dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:fontFamily="@font/product_sans_regular"
                android:text="@string/priority"
                android:textColor="@color/black" />

            <ImageView
                android:id="@+id/greenPrior"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/green_shape"
                android:src="@drawable/baseline_done_24" />

            <ImageView
                android:id="@+id/yellowPrior"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/yellow_shape" />

            <ImageView
                android:id="@+id/redPrior"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/red_shape" />

        </LinearLayout>

</LinearLayout>


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/doneNotesBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        android:contentDescription="@string/add_note"
        android:src="@drawable/baseline_done_24"
        app:backgroundTint="#3b4239" />


</RelativeLayout>
